# Delivery-bot

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.host.yaml  docker-compose.yaml  pyproject.toml  server.sh  server_reboot.sh  Бот развоз.md
docs/: MVP.md  MVP_schema_bot  MVP_shema_update_20_09  MVP_обновленный_20_09.md  bot_scheme.drawio  Бот_развоз.md  Диаграмма без названия.drawio  Документация релиз 1.1.0.md  Документация релиз 1.2.0.md
scripts/: fetch_dev.sh  server_reboot.sh
settings/: bot_config.json
src/: main.py
